--- a/EconomyJob/plugin.yml
+++ b/EconomyJob/plugin.yml
@@ -1,7 +1,9 @@
 name: EconomyJob
 main: economyjob\EconomyJob
 version: "2.0.0"
-api: [1.0.0]
+api: 
+- 1.0.0
+- 1.1.0
 author: onebone
 
 commands:
