--- a/EconomyAPI/plugin.yml
+++ b/EconomyAPI/plugin.yml
@@ -2,7 +2,9 @@ name: EconomyAPI
 main: economyapi\EconomyAPI
 version: "2.0.0"
 author: onebone
-api: [1.0.0]
+api:
+- 1.0.0
+- 1.1.0
 
 permissions:
  economyapi.*:
