Changed package name

--- a/EconomyCasino/plugin.yml
+++ b/EconomyCasino/plugin.yml
@@ -1,8 +1,10 @@
 name: EconomyCasino
-main: economycasino\EconomyCasino
+main: onebone\economycasino\EconomyCasino
 version: "2.0.0"
 author: onebone
-api: [1.0.0]
+api:
+- 1.0.0
+- 1.1.0
 
 permissions:
  economycasino.command.*:
