--- a/EconomyTax/plugin.yml
+++ b/EconomyTax/plugin.yml
@@ -1,8 +1,10 @@
 name: EconomyTax
-main: economytax\EconomyTax
+main: onebone\economytax\EconomyTax
 author: onebone
 version: "2.0.0"
-api: [1.0.0]
+api:
+- 1.0.0
+- 1.1.0
 permissions:
  economytax.tax.avoid:
   description: The permission that allows player to avoid paying tax
