--- a/EconomyAuction/plugin.yml
+++ b/EconomyAuction/plugin.yml
@@ -1,7 +1,9 @@
 name: EconomyAuction
-main: economyauction\EconomyAuction
+main: onebone\economyauction\EconomyAuction
 version: "2.0.0"
-api: [1.0.0]
+api:
+- 1.0.0
+- 1.1.0
 author: onebone
 
 commands:
