--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyShop
 version: "2.0.0"
 api: [1.1.0]
-main: economyshop\EconomyShop
+main: onebone\economyshop\EconomyShop
 author: onebone
 
 permissions:
