--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -6,7 +6,7 @@ api:
 - 1.1.0
 - 1.2.0
 - 1.2.1
-
+depend: [EconomyLand]
 permissions:
  economyproperty.*:
   description: Includes all permissions related to EconomyProperty
