--- a/EconomyAirport/plugin.yml
+++ b/EconomyAirport/plugin.yml
@@ -6,7 +6,10 @@ api:
 - 1.2.1
 - 1.3.0
 - 1.3.1
+- 1.4.0
+- 1.4.1
 main: onebone\economyairport\EconomyAirport
+depend: [EconomyAPI]
 
 permissions:
  economyairport.*:
