Update APIs and dependency lists

--- a/EconomySell/plugin.yml
+++ b/EconomySell/plugin.yml
@@ -1,8 +1,13 @@
 name: EconomySell
 main: onebone\economysell\EconomySell
 version: "2.0.0"
-api: [1.1.0]
+api:
+- 1.3.0
+- 1.3.1
+- 1.4.0
+- 1.4.1
 author: onebone
+depend: [EconomyAPI]
 
 permissions:
  economysell.*:
