--- a/EconomyCasino/plugin.yml
+++ b/EconomyCasino/plugin.yml
@@ -7,6 +7,11 @@ api:
 - 1.1.0
 - 1.2.0
 - 1.2.1
+- 1.3.0
+- 1.3.1
+- 1.4.0
+- 1.4.1
+depend: [EconomyAPI]
 
 permissions:
  economycasino.command.*:
