--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -5,8 +5,13 @@ api:
 - 1.1.0
 - 1.2.0
 - 1.2.1
+- 1.3.0
+- 1.3.1
+- 1.4.0
+- 1.4.1
 version: "2.0.0"
 author: onebone
+depend: [EconomyAPI]
 
 permissions:
  economyland.*:
