--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -6,7 +6,13 @@ api:
 - 1.1.0
 - 1.2.0
 - 1.2.1
-depend: [EconomyLand]
+- 1.3.0
+- 1.3.1
+- 1.4.0
+- 1.4.1
+depend:
+- EconomyLand
+- EconomyAPI
 permissions:
  economyproperty.*:
   description: Includes all permissions related to EconomyProperty
