--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -1,8 +1,13 @@
 name: EconomyShop
 version: "2.0.0"
-api: [1.1.0]
+api:
+- 1.3.0
+- 1.3.1
+- 1.4.0
+- 1.4.1
 main: onebone\economyshop\EconomyShop
 author: onebone
+depend: [EconomyAPI]
 
 permissions:
  economyshop.*:
