--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -1,5 +1,5 @@
 name: EconomyShop
-version: "2.0.2"
+version: "2.0.3"
 api:
 - 1.3.0
 - 1.3.1
@@ -8,6 +8,7 @@ api:
 main: onebone\economyshop\EconomyShop
 author: onebone
 depend: [EconomyAPI]
+load: POSTWORLD
 
 permissions:
  economyshop.*:
