Fixed airport sign not changing monetary unit, closes #24

--- a/EconomyAirport/resources/airport.yml
+++ b/EconomyAirport/resources/airport.yml
@@ -4,7 +4,7 @@ departure:
  airport:
   - "[AIRPORT]"
   - "departure"
-  - "cost : $%1" # cost
+  - "cost : %MONETARY_UNIT%%1" # cost
   - "%2" # destination
 
 arrival:
