Added tap feature to shop

--- a/EconomyShop/resources/language.yml
+++ b/EconomyShop/resources/language.yml
@@ -1,10 +1,10 @@
 wrong-format: "Please write your sign with right format"
 item-not-support: "Item %1 is not supported on EconomyShop"
 no-permission-create: "You don't have permission to create shop"
-shop-created: "Shop has been created (%1:%2 = $%3)"
+shop-created: "Shop has been created (%1:%2 = %MONETARY_UNIT%%3)"
 removed-shop: "Shop has been removed"
 no-permission-break: "You don't have permission to break shop"
-tap-again: "Are you sure to buy %1 ($%2)? Tap again to confirm"
+tap-again: "Are you sure to buy %3 of %1 (%MONETARY_UNIT%%2)? Tap again to confirm."
 full-inventory: "Sorry, your inventory is full"
 no-money: "You don't have to buy $%1"
 bought-item: "Has been bought %1 of %2 for $%3"
