Added permission related to moving land, closes #38

--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -31,13 +31,21 @@ permissions:
      economyland.land.give.others:
       description: Allows player to give others' land to others'
       default: op
-    economyland.landsell.*:
-     description: Gives permission player to access all land selling function
-     default: op
-     children:
-      economyland.landsell.others:
-       description: Allows player to sell others' land
-       default: op
+     economyland.landsell.*:
+      description: Gives permission player to access all land selling function
+      default: op
+      children:
+       economyland.landsell.others:
+        description: Allows player to sell others' land
+        default: op
+     economyland.land.move.*:
+          description: Allows player move to land
+          default: op
+          children:
+           economyland.land.move.others:
+            description: Allows player move to others' land
+            default: true
+
    economyland.command.*:
     description: Allows player to use all commands in EconomyLand
     default: op
