--- a/EconomyUsury/plugin.yml
+++ b/EconomyUsury/plugin.yml
@@ -4,3 +4,15 @@ author: onebone
 api: [1.12.0] # Pretty higher than I expected!
 main: onebone\economyusury\EconomyUsury
 depend: [EconomyAPI]
+
+permissions:
+ economyusury.*:
+  description: Gives player all access permissions to EconomyUsury
+  children:
+   economyusury.command.*:
+    description: Gives player all access permissions of commands
+    children:
+     economyusury.command.usury:
+      description: Gives player permission to execute usury command
+      default: true
+      children: [] # TODO: Add more children permissions
