--- a/EconomyAirport/plugin.yml
+++ b/EconomyAirport/plugin.yml
@@ -1,13 +1,7 @@
 name: EconomyAirport
 version: "2.0.3"
 author: onebone
-api:
-- 1.2.0
-- 1.2.1
-- 1.3.0
-- 1.3.1
-- 1.4.0
-- 1.4.1
+api: [1.12.0]
 main: onebone\economyairport\EconomyAirport
 depend: [EconomyAPI]
 
