--- a/EconomySell/plugin.yml
+++ b/EconomySell/plugin.yml
@@ -1,11 +1,7 @@
 name: EconomySell
 main: onebone\economysell\EconomySell
 version: "2.0.4"
-api:
-- 1.3.0
-- 1.3.1
-- 1.4.0
-- 1.4.1
+api: [1.12.0]
 author: onebone
 depend: [EconomyAPI]
 
