--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -1,10 +1,6 @@
 name: EconomyShop
 version: "2.0.4"
-api:
-- 1.3.0
-- 1.3.1
-- 1.4.0
-- 1.4.1
+api: [1.12.0]
 main: onebone\economyshop\EconomyShop
 author: onebone
 depend: [EconomyAPI]
