--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -2,14 +2,7 @@ name: EconomyProperty
 main: onebone\economyproperty\EconomyProperty
 version: "2.0.3"
 author: onebone
-api:
-- 1.1.0
-- 1.2.0
-- 1.2.1
-- 1.3.0
-- 1.3.1
-- 1.4.0
-- 1.4.1
+api: [1.12.0]
 depend:
 - EconomyLand
 - EconomyAPI
