--- a/EconomyUsury/resources/language.properties
+++ b/EconomyUsury/resources/language.properties
@@ -20,3 +20,18 @@ no-guarantee=§cYou don't have enough guarantee items!
 request-cancelled=Usury request to §a%1§r was cancelled.
 no-request-sent=You have no request sent to §a%1
 no-host-joined=You don't have any hosts you've joined.
+loan-left=You have to pay §6%MONETARY_UNIT%%1§r more to §a%2
+paid-all=You have paid all money to pay to §a%1§r and contract was terminated.
+client-paid-all=Your usury client §a%1§r returned all money and contract was terminated.
+client-usury-expired=Your usury with §a%1§r due was expired. Your guarantee item was paid to the host.
+usury-expired=Usury of §a%1§r was expired. Guarantee item was paid to your inventory.
+list-clients-top=§a%1§r players joined to your usury host: \n
+list-clients=§a%1§r: Item (%2 of %3), money (§6%MONETARY_UNIT%%4§r))\n
+list-requesters-top=§a%1§r players requested to your usury host: \n
+list-requesters=§a%1§r: Item (%2 of %3), due (§a%4§r min(s), money (§6%MONETARY_UNIT%%5§r))\n
+list-joined-top=There are §a%1§r hosts you have joined: \n
+list-hosts-top=There are §a%1§r hosts running: \n
+list-hosts=§a%1§r: §b%2§r client(s), interest : %3%4%§r per §6%5§rmin(s)\n
+# %3 of list-hosts is COLOR.
+list-left-top=Threre are §a%1§r hosts you have joined: \n
+list-left=§a%1§r: §6%MONETARY_UNIT%%2§r\n
