EconomyShop checks gamemode when buying, closes #108
Added permission and message

--- a/EconomyShop/resources/language.yml
+++ b/EconomyShop/resources/language.yml
@@ -4,7 +4,9 @@ no-permission-create: "You don't have permission to create shop"
 shop-created: "Shop has been created (%1:%2 = %MONETARY_UNIT%%3)"
 removed-shop: "Shop has been removed"
 no-permission-break: "You don't have permission to break shop"
+invalid-gamemode: "You are not available to buy item on that gamemode."
+no-permission-buy: "You don't have permission to buy from shop."
 tap-again: "Are you sure to buy %3 of %1 (%MONETARY_UNIT%%2)? Tap again to confirm."
 full-inventory: "Sorry, your inventory is full"
-no-money: "You don't have to buy $%1"
-bought-item: "Has been bought %1 of %2 for $%3"
+no-money: "You don't have money to buy $%1"
+bought-item: "You have bought %1 of %2 for $%3"
