--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -14,6 +14,9 @@ permissions:
     description: Allows all functions about shops
     default: op
     children:
+     economyshop.shop.buy:
+      description: Allows player to buy from shop
+      default: true
      economyshop.shop.create:
       description: Allows player to create shop
       default: op
