Added message for shop, closes #115

--- a/EconomyShop/resources/language.yml
+++ b/EconomyShop/resources/language.yml
@@ -6,6 +6,7 @@ removed-shop: "Shop has been removed"
 no-permission-break: "You don't have permission to break shop"
 invalid-gamemode: "You are not available to buy item on that gamemode."
 no-permission-buy: "You don't have permission to buy from shop."
+no-money-buy: "You don't have money to buy %1. (%MONETARY_UNIT%%2)"
 tap-again: "Are you sure to buy %3 of %1 (%MONETARY_UNIT%%2)? Tap again to confirm."
 full-inventory: "Sorry, your inventory is full"
 no-money: "You don't have money to buy $%1"
