--- a/EconomyPShop/resources/language.properties
+++ b/EconomyPShop/resources/language.properties
@@ -6,6 +6,7 @@ shop-removed=Your shop has been removed.
 shop-others-removed=%1's shop has been removed.
 no-permission-remove-shop=You don't have permission to remove shop.
 no-shop-tax=You don't have enough money to pay tax.
+no-permission-buy=You don't have permission to buy items from shop.
 same-player=You can't buy items from your shop.
 tap-again=Please tap again if you are sure to buy %3 of "%1" for %MONETARY_UNIT%%2
 no-stock=Sorry, there is no enough stock in the shop.
