more api support (｡+･`ω･´)

--- a/EconomySell/plugin.yml
+++ b/EconomySell/plugin.yml
@@ -1,7 +1,18 @@
 name: EconomySell
 main: onebone\economysell\EconomySell
 version: "2.0.7"
-api: [1.12.0]
+api:
+- 1.0.0
+- 1.1.0
+- 1.2.0
+- 1.2.1
+- 1.3.0
+- 1.3.1
+- 1.4.0
+- 1.4.1
+- 1.12.0
+- 1.13.0
+- 2.0.0
 author: onebone
 depend: [EconomyAPI]
 
