--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -1,6 +1,17 @@
 name: EconomyLand
 main: onebone\economyland\EconomyLand
-api: [1.12.0]
+api:
+- 1.0.0
+- 1.1.0
+- 1.2.0
+- 1.2.1
+- 1.3.0
+- 1.3.1
+- 1.4.0
+- 1.4.1
+- 1.12.0
+- 1.13.0
+- 2.0.0
 version: "2.0.9"
 author: onebone
 depend: [EconomyAPI]
