--- a/EconomyPShop/plugin.yml
+++ b/EconomyPShop/plugin.yml
@@ -3,7 +3,18 @@ version: "2.0.2"
 author: onebone
 main: onebone\economypshop\EconomyPShop
 
-api: [1.12.0]
+api:
+- 1.0.0
+- 1.1.0
+- 1.2.0
+- 1.2.1
+- 1.3.0
+- 1.3.1
+- 1.4.0
+- 1.4.1
+- 1.12.0
+- 1.13.0
+- 2.0.0
 
 permissions:
  economypshop.*:
