--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -102,7 +102,7 @@ commands:
  land:
   description: Manage land
   usage: /land <buy|move|list|whose|give|here|[r:]invite|invitee>
-  permission: economyland.command.land;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invitee
+  permission: economyland.command.land;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove;economyland.command.land.invitee
  landsell:
   description: Sell land
   usage: /landsell <here|land num>
