--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -1,26 +1,33 @@
 name: EconomyShop
 version: "2.0.7"
 api:
-- 1.0.0
-- 1.1.0
-- 1.2.0
-- 1.2.1
-- 1.3.0
-- 1.3.1
-- 1.4.0
-- 1.4.1
-- 1.12.0
 - 1.13.0
 - 2.0.0
 main: onebone\economyshop\EconomyShop
 author: onebone
 depend: [EconomyAPI]
 
+commands:
+ shop:
+  description: Management command for creating/removing shop
+  usage: /shop <create|remove|list> [item[:damage]] [amount] [price] [side]
+  permission: economyshop.command.shop;economyshop.command.shop.create;economyshop.command.shop.remove;economyshop.command.shop.list;
+
 permissions:
  economyshop.*:
   description: Allows all functions in EconomyShop
   default: op
   children:
+   economyshop.command.shop:
+    description: Allows player to use /shop
+    children:
+     economyshop.command.shop.create:
+      description: Allows player to use /shop create
+     economyshop.command.shop.remove:
+      description: Allows player to use /shop remove
+     economyshop.command.shop.list:
+      description: Allows player to use /shop list
+      default: true
    economyshop.shop.*:
     description: Allows all functions about shops
     default: op
