--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -25,3 +25,13 @@ permissions:
    economyproperty.command.property:
     description: Allows player to use property command
     default: op
+    children:
+     economyproperty.command.property.pos1:
+      default: op
+      description: Allows player to use /property pos1 command
+     economyproperty.command.property.pos2:
+      default: op
+      description: Allows player to use /property pos2 command
+     economyproperty.command.property.make:
+      default: op
+      description: Allows player to use /property make command
