--- a/EconomyAPI/resources/config.yml
+++ b/EconomyAPI/resources/config.yml
@@ -1,9 +1,25 @@
-# EconomyS configuration resource
+# monetary-unit: Set what monetary unit you want to use
 monetary-unit: "$"
+# add-op-at-rank: Set whether to show OPs at top money rank
 add-op-at-rank: false
+# default-money: Set default money when player joined the server first
 default-money: 1000
+# max-money: Set max money that player can have
 max-money: 9999999999
-debug: true
-default-lang: user-define
+# default-lang: Set default language
+default-lang: def
+# auto-save-interval: Set interval of auto-save
 auto-save-interval: 10
+# provider: Set provider of database (Available: yaml)
 provider: yaml
+# check-update: Set whether to check update from server
+check-update: true
+# update-host: Set host where to check update
+update-host: onebone.me/plugins/economys/api
+
+# provider-settings: Data which will be given to database provider
+provider-settings:
+  host: 127.0.0.1
+  user: onebone
+  password: hello_world
+  db: economyapi
