--- a/EconomyAPI/resources/config.yml
+++ b/EconomyAPI/resources/config.yml
@@ -20,6 +20,7 @@ update-host: onebone.me/plugins/economys/api
 # provider-settings: Data which will be given to database provider
 provider-settings:
   host: 127.0.0.1
+  port: 3306
   user: onebone
   password: hello_world
   db: economyapi
