--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -87,10 +87,13 @@ permissions:
        economyland.command.land.invite.remove:
         description: Allows player to remove invitee from the list
         default: true
+        children:
+         economyland.command.land.invite.remove.others:
+          default: op
        economyland.command.land.invitee:
         description: Allows player to see invitee
         default: true
-         
+
      economyland.command.landsell:
       description: Allows player to sell lands
       default: op
@@ -112,7 +115,7 @@ commands:
   permission: economyland.command.endp
  land:
   description: Manage land
-  usage: /land <buy|move|list|whose|give|here|[r:]invite|invitee>
+  usage: /land <buy|move|list|whose|give|here|[r:]invite|kick|invitee>
   permission: economyland.command.land;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove;economyland.command.land.invitee
  landsell:
   description: Sell land
