Added multi language support for shop, sell

--- a/EconomySell/resources/config.yml
+++ b/EconomySell/resources/config.yml
@@ -6,3 +6,5 @@ enable-double-tap: true
 auto-save: true
 # Sell center data provider (yaml)
 data-provider: yaml
+# Language of EconomySell will use (en)
+lang: en
