--- a/EconomyShop/resources/config.yml
+++ b/EconomyShop/resources/config.yml
@@ -6,3 +6,5 @@ enable-double-tap: true
 auto-save: true
 # Shop data provider (yaml)
 data-provider: yaml
+# Language of EconomyShop will use (en)
+lang: en
