Added option to disallow creation in specific world, closes #317

--- a/EconomyPShop/resources/language.properties
+++ b/EconomyPShop/resources/language.properties
@@ -1,5 +1,6 @@
 # EconomyPShop language properties file
 no-permission-create-shop=You don't have permission to create shop.
+disallowed-world=The world you are located is not allowed to create shop.
 insert-right-format=Please write the sign in right format.
 shop-created=Your shop was opened with item %3 of "%1" for %MONETARY_UNIT%%2.
 shop-removed=Your shop has been removed.
