--- a/EconomyPShop/resources/config.yml
+++ b/EconomyPShop/resources/config.yml
@@ -1,1 +1,5 @@
+# Money required to create pshop
 shop-tax: 100
+# Worlds not to allow to create pshop
+# World names must be listed in lower case
+disallow-worlds: []
