--- a/EconomyJob/plugin.yml
+++ b/EconomyJob/plugin.yml
@@ -1,11 +1,7 @@
 name: EconomyJob
 main: onebone\economyjob\EconomyJob
 version: "2.0.4"
-api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
-
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
 depend: [EconomyAPI]
 author: onebone
 
