--- a/EconomyAuction/plugin.yml
+++ b/EconomyAuction/plugin.yml
@@ -1,11 +1,7 @@
 name: EconomyAuction
 main: onebone\economyauction\EconomyAuction
 version: "2.0.2"
-api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
-
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
 author: onebone
 depend: [EconomyAPI]
 
