--- a/EconomyCasino/plugin.yml
+++ b/EconomyCasino/plugin.yml
@@ -2,11 +2,7 @@ name: EconomyCasino
 main: onebone\economycasino\EconomyCasino
 version: "2.0.2"
 author: onebone
-api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
-
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
 depend: [EconomyAPI]
 
 permissions:
