--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -2,11 +2,7 @@ name: EconomyProperty
 main: onebone\economyproperty\EconomyProperty
 version: "2.0.6"
 author: onebone
-api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
-
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
 depend:
 - EconomyLand
 - EconomyAPI
