--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -1,10 +1,6 @@
 name: EconomyShop
 version: "2.0.7"
-api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
-
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
 main: onebone\economyshop\EconomyShop
 author: onebone
 depend: [EconomyAPI]
