--- a/EconomyUsury/plugin.yml
+++ b/EconomyUsury/plugin.yml
@@ -1,11 +1,7 @@
 name: EconomyUsury
 version: "1.0.1"
 author: onebone
-api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
-
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
 main: onebone\economyusury\EconomyUsury
 depend: [EconomyAPI]
 
