--- a/EconomyAPI/plugin.yml
+++ b/EconomyAPI/plugin.yml
@@ -1,6 +1,6 @@
 name: EconomyAPI
 main: onebone\economyapi\EconomyAPI
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4]
 version: "5.7"
 author: onebone
 permissions:
