--- a/EconomyCasino/plugin.yml
+++ b/EconomyCasino/plugin.yml
@@ -2,7 +2,7 @@ name: EconomyCasino
 main: onebone\economycasino\EconomyCasino
 version: "2.0.2"
 author: onebone
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4]
 depend: [EconomyAPI]
 
 permissions:
