--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -1,6 +1,6 @@
 name: EconomyLand
 main: onebone\economyland\EconomyLand
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4]
 version: "2.0.9"
 author: onebone
 depend: [EconomyAPI]
