--- a/EconomyTax/plugin.yml
+++ b/EconomyTax/plugin.yml
@@ -2,7 +2,7 @@ name: EconomyTax
 main: onebone\economytax\EconomyTax
 author: onebone
 version: "2.0.3"
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3]
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4]
 depend: [EconomyAPI]
 permissions:
  economytax.tax.avoid:
