--- a/EconomyAuction/plugin.yml
+++ b/EconomyAuction/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyAuction
 main: onebone\economyauction\EconomyAuction
 version: "2.0.2"
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4]
+api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4, 3.0.0-ALPHA5]
 author: onebone
 depend: [EconomyAPI]
 
