--- a/EconomyUsury/plugin.yml
+++ b/EconomyUsury/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyUsury
-version: "1.0.1"
+version: "1.0.1-dev1"
 author: onebone
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4, 3.0.0-ALPHA5]
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
 main: onebone\economyusury\EconomyUsury
 depend: [EconomyAPI]
 
