--- a/EconomyAPI/plugin.yml
+++ b/EconomyAPI/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyAPI
 main: onebone\economyapi\EconomyAPI
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4, 3.0.0-ALPHA5]
-version: 5.7.1
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+version: 5.7.1-dev1
 author: onebone
 permissions:
  economyapi.*:
