--- a/EconomyJob/plugin.yml
+++ b/EconomyJob/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyJob
 main: onebone\economyjob\EconomyJob
-version: "2.0.4"
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4, 3.0.0-ALPHA5]
+version: "2.0.4-dev1"
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
 depend: [EconomyAPI]
 author: onebone
 
