--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyLand
 main: onebone\economyland\EconomyLand
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4, 3.0.0-ALPHA5]
-version: "2.1.0"
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+version: "2.1.0-dev1"
 author: onebone
 depend: [EconomyAPI]
 
