--- a/EconomyPShop/plugin.yml
+++ b/EconomyPShop/plugin.yml
@@ -1,8 +1,8 @@
 name: EconomyPShop
-version: "2.0.2"
+version: "2.0.2-dev1"
 author: onebone
 main: onebone\economypshop\EconomyPShop
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4, 3.0.0-ALPHA5]
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
 permissions:
  economypshop.*:
   description: Allows all permissions to the player
