--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -1,8 +1,8 @@
 name: EconomyProperty
 main: onebone\economyproperty\EconomyProperty
-version: "2.0.6"
+version: "2.0.6-dev1"
 author: onebone
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4, 3.0.0-ALPHA5]
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
 depend:
 - EconomyLand
 - EconomyAPI
