--- a/EconomyAPI/plugin.yml
+++ b/EconomyAPI/plugin.yml
@@ -3,9 +3,33 @@ main: onebone\economyapi\EconomyAPI
 version: "2.0.9"
 author: onebone
 api:
-- 3.0.0
 - 2.0.0
 - 2.1.0
+- 3.0.0
+- 3.0.0-ALPHA1
+- 3.0.0-ALPHA2
+- 3.0.0-ALPHA3
+- 3.0.0-ALPHA4
+- 3.0.0-ALPHA5
+- 3.0.0-ALPHA6
+- 3.0.0-ALPHA7
+- 3.0.0-ALPHA8
+- 3.0.0-ALPHA9
+- 3.0.0-ALPHA10
+- 3.0.0-ALPHA11
+- 3.0.0-ALPHA12
+- 3.0.0-ALPHA13
+- 3.0.0-ALPHA14
+- 3.0.0-ALPHA15
+- 3.0.0-ALPHA16
+- 3.0.0-ALPHA17
+- 3.0.0-ALPHA18
+- 3.0.0-ALPHA19
+- 3.0.0-ALPHA20
+- 3.1.0
+- 3.2.0
+- 3.3.0
+- 4.0.0
 
 permissions:
  economyapi.*:
