--- a/EconomyAuction/plugin.yml
+++ b/EconomyAuction/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyAuction
 main: onebone\economyauction\EconomyAuction
 version: "2.0.2-dev1"
-api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+api: [3.0.0-ALPHA7]
 author: onebone
 depend: [EconomyAPI]
 
