--- a/EconomyAirport/plugin.yml
+++ b/EconomyAirport/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyAirport
 version: "2.0.4"
 author: onebone
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4, 3.0.0-ALPHA5]
+api: [3.0.0-ALPHA7]
 main: onebone\economyairport\EconomyAirport
 depend: [EconomyAPI]
 
