--- a/EconomyCasino/plugin.yml
+++ b/EconomyCasino/plugin.yml
@@ -2,7 +2,7 @@ name: EconomyCasino
 main: onebone\economycasino\EconomyCasino
 version: "2.0.2-dev1"
 author: onebone
-api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+api: [3.0.0-ALPHA7]
 depend: [EconomyAPI]
 
 permissions:
