--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -2,7 +2,7 @@ name: EconomyProperty
 main: onebone\economyproperty\EconomyProperty
 version: "2.0.6-dev1"
 author: onebone
-api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+api: [3.0.0-ALPHA7]
 depend:
 - EconomyLand
 - EconomyAPI
