--- a/EconomySell/plugin.yml
+++ b/EconomySell/plugin.yml
@@ -1,6 +1,6 @@
 name: EconomySell
 version: "2.0.7-dev1"
-api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+api: [3.0.0-ALPHA7]
 main: onebone\economysell\EconomySell
 author: onebone
 depend: [EconomyAPI]
