--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -1,6 +1,6 @@
 name: EconomyShop
 version: 2.0.8-dev1
-api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+api: [3.0.0-ALPHA7]
 main: onebone\economyshop\EconomyShop
 author: onebone
 depend: [EconomyAPI]
