--- a/EconomyTax/plugin.yml
+++ b/EconomyTax/plugin.yml
@@ -2,7 +2,7 @@ name: EconomyTax
 main: onebone\economytax\EconomyTax
 author: onebone
 version: "2.0.3-dev1"
-api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+api: [3.0.0-ALPHA7]
 depend: [EconomyAPI]
 permissions:
  economytax.tax.avoid:
