--- a/EconomyUsury/plugin.yml
+++ b/EconomyUsury/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyUsury
 version: "1.0.1-dev1"
 author: onebone
-api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+api: [3.0.0-ALPHA7]
 main: onebone\economyusury\EconomyUsury
 depend: [EconomyAPI]
 
