PLEASE STOP CHANGING API
https://stackoverflow.com/questions/3580628/is-type-hinting-helping-the-performance-of-php-scripts

Please stop making changes that I have to make these unnecessary changes...

It is better to create PHP Doc

--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -1,9 +1,7 @@
 name: EconomyShop
 version: "2.0.7"
 api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
+- 3.0.0-ALPHA7
 
 main: onebone\economyshop\EconomyShop
 author: onebone
