--- a/EconomyAirport/plugin.yml
+++ b/EconomyAirport/plugin.yml
@@ -2,9 +2,7 @@ name: EconomyAirport
 version: "2.0.4"
 author: onebone
 api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
+- 3.0.0-ALPHA7
 
 main: onebone\economyairport\EconomyAirport
 depend: [EconomyAPI]
