--- a/EconomyAuction/plugin.yml
+++ b/EconomyAuction/plugin.yml
@@ -2,9 +2,7 @@ name: EconomyAuction
 main: onebone\economyauction\EconomyAuction
 version: "2.0.2"
 api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
+- 3.0.0-ALPHA7
 
 author: onebone
 depend: [EconomyAPI]
