--- a/EconomyCasino/plugin.yml
+++ b/EconomyCasino/plugin.yml
@@ -3,9 +3,7 @@ main: onebone\economycasino\EconomyCasino
 version: "2.0.2"
 author: onebone
 api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
+- 3.0.0-ALPHA7
 
 depend: [EconomyAPI]
 
