--- a/EconomyJob/plugin.yml
+++ b/EconomyJob/plugin.yml
@@ -2,9 +2,7 @@ name: EconomyJob
 main: onebone\economyjob\EconomyJob
 version: "2.0.4"
 api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
+- 3.0.0-ALPHA7
 
 depend: [EconomyAPI]
 author: onebone
