--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -1,9 +1,7 @@
 name: EconomyLand
 main: onebone\economyland\EconomyLand
 api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
+- 3.0.0-ALPHA7
 
 version: "2.0.9"
 author: onebone
