--- a/EconomyPShop/plugin.yml
+++ b/EconomyPShop/plugin.yml
@@ -4,9 +4,7 @@ author: onebone
 main: onebone\economypshop\EconomyPShop
 
 api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
+- 3.0.0-ALPHA7
 
 permissions:
  economypshop.*:
