--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -3,9 +3,7 @@ main: onebone\economyproperty\EconomyProperty
 version: "2.0.6"
 author: onebone
 api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
+- 3.0.0-ALPHA7
 
 depend:
 - EconomyLand
