--- a/EconomyUsury/plugin.yml
+++ b/EconomyUsury/plugin.yml
@@ -2,9 +2,7 @@ name: EconomyUsury
 version: "1.0.1"
 author: onebone
 api:
-- 3.0.0
-- 2.0.0
-- 2.1.0
+- 3.0.0-ALPHA7
 
 main: onebone\economyusury\EconomyUsury
 depend: [EconomyAPI]
