--- a/EconomySell/resources/config.yml
+++ b/EconomySell/resources/config.yml
@@ -6,5 +6,5 @@ enable-double-tap: true
 auto-save: true
 # Sell center data provider (yaml)
 data-provider: yaml
-# Language of EconomySell will use (en, ko, jp)
+# Language of EconomySell will use (en, ko, jp, uk)
 lang: en
