--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -1,6 +1,6 @@
 name: EconomyProperty
 main: onebone\economyproperty\EconomyProperty
-version: "2.0.6-dev2"
+version: "2.0.7"
 author: onebone
 api: [3.0.0-ALPHA7]
 depend:
