tested with 3.0.0-ALPHA8

--- a/EconomyAPI/plugin.yml
+++ b/EconomyAPI/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyAPI
 main: onebone\economyapi\EconomyAPI
-api: [3.0.0-ALPHA7]
-version: 5.7.1-dev2
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8]
+version: 5.7.1-1.alpha8
 author: onebone
 permissions:
  economyapi.*:
