--- a/EconomyAuction/plugin.yml
+++ b/EconomyAuction/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyAuction
 main: onebone\economyauction\EconomyAuction
-version: "2.0.2-dev2"
-api: [3.0.0-ALPHA7]
+version: "2.0.2-1.alpha8"
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8]
 author: onebone
 depend: [EconomyAPI]
 
