--- a/EconomyPShop/plugin.yml
+++ b/EconomyPShop/plugin.yml
@@ -1,8 +1,8 @@
 name: EconomyPShop
-version: "2.0.2-dev2"
+version: "2.0.2-1.alpha8"
 author: onebone
 main: onebone\economypshop\EconomyPShop
-api: [3.0.0-ALPHA7]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8]
 permissions:
  economypshop.*:
   description: Allows all permissions to the player
