--- a/EconomyJob/plugin.yml
+++ b/EconomyJob/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyJob
 main: onebone\economyjob\EconomyJob
-version: "2.0.4-1.alpha8"
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8]
+version: "2.0.4-2"
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
 depend: [EconomyAPI]
 author: onebone
 
