--- a/EconomyTax/plugin.yml
+++ b/EconomyTax/plugin.yml
@@ -1,8 +1,8 @@
 name: EconomyTax
 main: onebone\economytax\EconomyTax
 author: onebone
-version: "2.0.3-1.alpha8"
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8]
+version: "2.0.3-2"
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
 depend: [EconomyAPI]
 permissions:
  economytax.tax.avoid:
