Added compatibility with older Sell.yml format

--- a/EconomySell/plugin.yml
+++ b/EconomySell/plugin.yml
@@ -1,5 +1,5 @@
 name: EconomySell
-version: "2.0.7-2"
+version: 2.0.7-3
 api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
 main: onebone\economysell\EconomySell
 author: onebone
