--- a/EconomyAirport/plugin.yml
+++ b/EconomyAirport/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyAirport
 version: "2.0.4-2"
 author: onebone
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
 main: onebone\economyairport\EconomyAirport
 depend: [EconomyAPI]
 
