--- a/EconomyCasino/plugin.yml
+++ b/EconomyCasino/plugin.yml
@@ -2,7 +2,7 @@ name: EconomyCasino
 main: onebone\economycasino\EconomyCasino
 version: "2.0.2-2"
 author: onebone
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
 depend: [EconomyAPI]
 
 permissions:
