--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -1,6 +1,6 @@
 name: EconomyLand
 main: onebone\economyland\EconomyLand
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
 version: "2.1.1-2"
 author: onebone
 depend: [EconomyAPI]
